deployment_minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio:latest
        ports:
        - containerPort: 9000
        - containerPort: 9001
        volumeMounts:
        - name: minio-data
          mountPath: /data
        command:
        - "minio"
        - "server"
        - "/data"
        - "--console-address"
        - ":9001"
        - "--address"
        - ":9000"
      volumes:
      - name: minio-data
        persistentVolumeClaim:
          claimName: minio-pvc  

---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  selector:
    app: minio
  ports:
  - protocol: TCP
    name: port-9000
    port: 9000
    targetPort: 9000
  - protocol: TCP
    name: port-9001
    port: 9001
    targetPort: 9001
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-route
spec:
  to:
    kind: Service
    name: minio-service
  port:
    targetPort: 9001
